# OmniVox

./: .gitignore  CHANGELOG.md  README.md  index.html  install.ps1  install.sh  overlay.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml  rust-health.yml
OmniVoice/: index.html  package.json
OmniVoice/src/: App.tsx
OmniVoice/src-tauri/: Cargo.toml
OmniVoice/src-tauri/capabilities/: default.json
OmniVoice/src-tauri/src/: error.rs  lib.rs  pipeline.rs  state.rs
OmniVoice/src-tauri/src/asr/: engine.rs
OmniVoice/src-tauri/src/audio/: capture.rs  mod.rs  types.rs  vad.rs
OmniVoice/src-tauri/src/commands/: audio.rs  dictionary.rs  history.rs  llm.rs  mod.rs
OmniVoice/src-tauri/src/llm/: engine.rs
OmniVoice/src-tauri/src/models/: downloader.rs  mod.rs  types.rs
OmniVoice/src-tauri/src/output/: mod.rs  router.rs
OmniVoice/src-tauri/src/postprocess/: processor.rs
OmniVoice/src-tauri/src/storage/: database.rs  dictionary.rs  history.rs  settings.rs  snippets.rs  types.rs
OmniVoice/src/app/: Sidebar.tsx  providers.tsx
OmniVoice/src/features/dictation/: AudioVisualizer.tsx  RecordButton.tsx
OmniVoice/src/features/settings/: SettingsPage.tsx
OmniVoice/src/hooks/: useTauriCommand.ts  useTauriEvent.ts
OmniVoice/src/lib/: tauri.ts
OmniVoice/src/stores/: appStore.ts
OmniVoice/src/styles/: tokens.css
docs/: floating-pill-redesign-plan.md  structured-mode-plan.md
scripts/: start-release-dev.ps1
src/: App.tsx  overlay-main.tsx
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  build.rs  deny.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/examples/: llm_probe.rs
src-tauri/icons/: icon.icns
src-tauri/llm-sidecar/: Cargo.toml
src-tauri/llm-sidecar/src/: main.rs
src-tauri/resources/grammars/: slot_extraction_v1.gbnf
src-tauri/src/: error.rs  hotkey.rs  lib.rs  main.rs  pipeline.rs  state.rs
src-tauri/src/asr/: engine.rs  types.rs
src-tauri/src/audio/: capture.rs  denoise.rs  ducking.rs  mod.rs  normalize.rs
src-tauri/src/cleanup/: mod.rs  prompts.rs  registry.rs  service.rs  tests.rs  types.rs
src-tauri/src/commands/: audio.rs  cleanup.rs  context_modes.rs  dictionary.rs  history.rs  llm.rs  mod.rs  models.rs  notes.rs  settings.rs
src-tauri/src/llm/: diaglog.rs  engine.rs  grammar.rs  mod.rs  prompt.rs  runner.rs  schema.rs  template.rs  tests.rs  types.rs  voxify.rs
src-tauri/src/llm_models/: downloader.rs  manager.rs  mod.rs  types.rs
src-tauri/src/models/: downloader.rs  manager.rs
src-tauri/src/output/: router.rs  types.rs
src-tauri/src/postprocess/: formatter.rs  mod.rs  processor.rs  types.rs  voice_commands.rs
src-tauri/src/screen_context/: diaglog.rs  extract.rs  mod.rs  tests.rs  windows.rs
src-tauri/src/storage/: app_bindings.rs  context_modes.rs  database.rs  dictionary.rs  history.rs  mod.rs  notes.rs  settings.rs  snippets.rs  symbols.rs  types.rs  vocabulary.rs
src/app/: Sidebar.tsx  providers.tsx
src/components/: ErrorBoundary.tsx  Logo.tsx  ToastContainer.tsx
src/features/dictation/: AudioVisualizer.tsx  DictationPanel.tsx  RecordButton.tsx
src/features/dictionary/: DictionaryPage.tsx
src/features/history/: HistoryPage.tsx
src/features/models/: LlmModelsSection.tsx  ModelsPage.tsx  SpeechModelsSection.tsx
src/features/modes/: ContextModesPage.tsx
src/features/notes/: NotesPage.tsx
src/features/overlay/: FloatingOverlay.tsx  FloatingPill.tsx  ModeSelector.tsx  PillWaveform.tsx  StructuredModeToggle.tsx  StructuredPanel.tsx
src/features/settings/: LlmModelsPage.tsx  SettingsPage.tsx  StructuredModeSection.tsx
src/hooks/: useAudioLevel.ts  useRecordingState.ts  useTauriCommand.ts  useTauriEvent.ts
src/lib/: tauri.ts  utils.ts  vk-codes.ts
src/stores/: appStore.ts  contextModeStore.ts  recordingStore.ts  settingsStore.ts  toastStore.ts
src/styles/: globals.css  tokens.css
