[package]
name = "omnivoice"
version = "0.1.8"
description = "OmniVox - Local AI Dictation"
authors = ["you"]
edition = "2021"

[lib]
name = "omnivoice_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "6"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream"] }
rusqlite = { version = "0.34", features = ["bundled"] }
cpal = "0.15"
whisper-rs = "0.16"
enigo = "0.2"
arboard = "3"
tauri-plugin-single-instance = "2.4.0"
nnnoiseless = { version = "0.5", default-features = false }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
] }
windows = { version = "0.61", features = [
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com",
] }

[target.'cfg(not(target_os = "windows"))'.dependencies]
# Cross-platform global keyboard listener for hotkey support (macOS & Linux).
# Windows uses its own WH_KEYBOARD_LL hook via windows-sys.
rdev = "0.5"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
core-graphics = "0.24"
core-foundation = "0.10"
objc = "0.2"
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
# Linux support planned — stubs compile without extra deps for now

[features]
default = []
cuda = ["whisper-rs/cuda"]
# Vulkan provides GPU acceleration for both AMD and NVIDIA GPUs.
# Install the Vulkan SDK, then build with: cargo build --features vulkan
# The Settings UI toggle controls runtime GPU use once compiled with this feature.
vulkan = ["whisper-rs/vulkan"]
custom-protocol = ["tauri/custom-protocol"]

# Optimize heavy C/C++ deps even in debug builds — whisper.cpp and llama.cpp
# allocate huge stack frames in debug mode that cause STATUS_STACK_BUFFER_OVERRUN
# on Windows. Compiling them with opt-level 2 shrinks stack frames dramatically.
[profile.dev.package.whisper-rs-sys]
opt-level = 2
